# pyopal

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: package.yml  requirements.txt  test.yml
docs/: conf.py  index.rst  install.rst  related.rst  requirements.txt
docs/_static/json/: switcher.json
docs/api/: aligner.rst  alphabet.rst  database.rst  index.rst  result.rst  score_matrix.rst
docs/examples/: abc.ipynb  index.rst
docs/guide/: copyright.rst  index.rst  install.rst
include/opal/: __init__.pxd
include/sword/: chain.pxd  database_search.pxd  hash.pxd  kmers.pxd  reader.pxd  score_matrix.pxd
pkg/aur/: PKGBUILD.in
pyopal/: __init__.py  _align.py  _align.pyi  _opal.pyi  _opal.pyx  _opal_avx2.pxd  _opal_avx2.pyx  _opal_neon.pxd  _opal_neon.pyx  _opal_sse2.pxd  _opal_sse2.pyx  _opal_sse4.pxd  _opal_sse4.pyx  _sword.pyx  _version.py  lib.pxd  lib.pyi  lib.pyx  opal.h  shared_mutex.pxd
pyopal/opal/: score_matrix.pxd
pyopal/platform/: .gitignore  pxd.in  pyx.in
pyopal/tests/: __init__.py  test_align.py  test_aligner.py  test_alphabet.py  test_database.py  test_doctest.py  test_result.py  test_score_matrix.py  test_search.py
src/: CMakeLists.txt
src/opal/src/: CMakeLists.txt
src/pyopal/: CMakeLists.txt  __init__.pxd  __init__.py  _align.py  _align.pyi  lib.pyx  opal.pxd
src/pyopal/platform/: CMakeLists.txt  pyx.in
src/pyopal/tests/: __init__.py  test_aligner.py  test_database.py  test_doctest.py
src/scripts/cmake/: CythonExtension.cmake
